We forgot one...
Fixes #1527

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -96,6 +96,7 @@ Hardcore:
             Acrobatics: false
             Archery: false
             Axes: false
+            Excavation: false
             Fishing: false
             Herbalism: false
             Mining: false
@@ -110,6 +111,7 @@ Hardcore:
             Acrobatics: false
             Archery: false
             Axes: false
+            Excavation: false
             Fishing: false
             Herbalism: false
             Mining: false
