Changed kraken default behavior
It will no longer broadcast chat messages globally by default, as well as strike lightning on it's target. Instead it will spawn explosion effects.

--- a/src/main/resources/advanced.yml
+++ b/src/main/resources/advanced.yml
@@ -499,7 +499,7 @@ Kraken:
     Name: The Kraken
     Attack_Interval_Seconds: 1
     Attack_Damage: 1.0
-    Global_Sounds: true
+    Global_Effects: false
     Allow_Escaping: false
     Unleashed_Message:
         Server: (PLAYER) has unleashed the kraken!
