--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -386,6 +386,7 @@ Commands:
     partychat:
         Chat_Prefix_Format: '[[GREEN]]([[WHITE]]{0}[[GREEN]])'
         Use_Display_Names: true
+        Chat_Prefix_Format_Ally: '[[GREEN]](A)[[RESET]]'
     adminchat:
         Chat_Prefix_Format: '[[AQUA]][[[WHITE]]{0}[[AQUA]]]'
         Use_Display_Names: true
