Earn XP when using Shake
Adds #1564

--- a/src/main/resources/experience.yml
+++ b/src/main/resources/experience.yml
@@ -75,6 +75,7 @@ Experience:
         FeatherFall_Multiplier: 2.0
     Fishing:
         Base: 800
+        Shake: 50
     Excavation:
         Clay: 40
         Dirt: 40
