Added bypass permission for finding Fishing traps

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -635,6 +635,7 @@ permissions:
             mcmmo.bypass.arcanebypass: true
             mcmmo.bypass.hardcoremode: true
             mcmmo.bypass.kraken: true
+            mcmmo.bypass.fishingTraps: true
             mcmmo.commands.inspect.far: true
             mcmmo.commands.inspect.hidden: true
             mcmmo.commands.inspect.offline: true
@@ -647,6 +648,9 @@ permissions:
     mcmmo.bypass.kraken:
         default: false
         description: Allows user to bypass the effects of the exploit prevention when Fishing
+    mcmmo.bypass.fishingTraps:
+        default: false
+        description: Allows user to bypass finding traps when Fishing
     mcmmo.bypass.inspect.distance:
         default: false
         description: Allows user to bypass Inspect's distance requirements
