Added party levels
Parties now have XP and Levels. Party features such as party teleport and party chat have to be unlocked before they can be used by the party members

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -199,14 +199,30 @@ Party:
     AutoKick_Interval: 12
     # Any user who hasn't connected in this many days will get kicked from their party
     Old_Party_Member_Cutoff: 7
+
     # Settings for party share modes
     Sharing:
-        ExpShare_enabled: true
         ExpShare_bonus_base: 1.1
         ExpShare_bonus_increase: 1.05
         ExpShare_bonus_cap: 1.5
-        ItemShare_enabled: true
         Range: 75.0
+
+    # Party members level up their party by earning individual experience
+    # Newly created parties will not immediately have access to all the party features
+    # and have to level up the party a bit before they can use them.
+    Leveling:
+        Level_Cap: 10
+
+        # Uses the regular XP formula but is multiplied by <amount of party members> + <Xp_Curve_Modifier>
+        Xp_Curve_Modifier: 3
+        Near_Members_Needed: false
+        Inform_All_Party_Members_On_LevelUp: false
+
+        Chat_UnlockLevel: 1
+        Teleport_UnlockLevel: 2
+        Alliance_UnlockLevel: 5
+        ItemShare_UnlockLevel: 8
+        XpShare_UnlockLevel: 10
 
 #
 #  Settings for Abilities
